# tremor-benchmark

./: .env  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile.bench  README.md  recent.json
.github/: README.md
.github/workflows/: ci.yml  deploy.yml
data/: data.json  recent.json
docker/: Dockerfile  Dockerfile.in  run.sh
docker/benchmarks/bench/bench_pipe_passthrough/: empty-pipeline.yaml
docker/benchmarks/bench/bench_pipe_passthrough_binflux/: empty-pipeline-binflux.yaml
docker/benchmarks/bench/bench_pipe_passthrough_influx/: empty-pipeline-influx.yaml
docker/benchmarks/bench/bench_pipe_passthrough_json/: empty-pipeline-json.yaml
docker/benchmarks/bench/bench_pipe_passthrough_msgpack/: empty-pipeline-msgpack.yaml
docker/benchmarks/bench/bench_pipe_passthrough_two_inputs/: empty-pipeline-two-inputs.yaml
docker/benchmarks/bench/throughput-logging-json/: real-workflow-throughput-json.yaml
docker/benchmarks/bench/throughput-logging-msgpack/: real-workflow-throughput-msgpack.yaml
docker/benchmarks/bench/tl-enrich/: real-workflow-enrich.yaml
migrations/2021-10-01-103631_create_benchmarks/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  model.rs  schema.rs  util.rs
ui/: index.html
webhooks/: index.js  package.json  pnpm-lock.yaml
website/: data.json  package-lock.json  package.json  pnpm-lock.yaml
website/components/: Benchmark.js
website/pages/: index.js
