[package]
name = "tremor-benchmark"
description = "Continuous benchmarking infrastructure for Tremor"
version = "0.1.0"
authors = ["Akshat Agarwal <humancalico@disroot.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/humancalico/tremor-benchmark"
keywords = ["tremor", "benchmark"]
categories = ["Benchmarking"]

[dependencies]
color-eyre = "0.5.10"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"

[dev-dependencies]
pretty_assertions = "0.7.1"
