[package]
authors = ["The Tremor Team"]
description = "Continuous benchmarking infrastructure for Tremor"
edition = "2021"
license = "Apache-2.0"
name = "tremor-benchmark"
publish = false
repository = "https://github.com/humancalico/tremor-benchmark"
version = "0.1.0"

[dependencies]
async-std = { version = "*", features = ["unstable"] }
base16 = "*"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
color-eyre = "0.6"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
futures-util = "0.3"
hmac = "0.11"
hyper = { version = "0.14", features = ["full"] }
octocrab = "0.16"
pretty_env_logger = "0.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "*"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
